# AudioTool

./: .gitignore  README.md  Setup.bat  pyproject.toml  requirements.txt  run_main.bat
Source/: main.py
Source/Config/: ConsoleVariable.ini  Hook.ini  Layout.ini  Module.ini  config.py
Source/Core/: MenuCollector.py  Root.py  coll.py
Source/Core/Collector/: CollectorSystem.py  __init__.py
Source/Core/Data/: DataSystem.py  __init__.py
Source/Core/Engine/: Engine.py
Source/Core/Ini/: ConsoleVariable.py  __init__.py
Source/Core/Log/: Logger.py  __init__.py
Source/Core/PreBuild/: PreBuildSystem.py  __init__.py
Source/Module/: Build.py
Source/Module/Example/: Example.py
Source/Module/Reaper/: Reaper.py
Source/Module/Wwise/: Wwise.py  WwiseCore.py
TEST/Example/TestCollectionCore/: CollectionCore.py  Main.py  PyClass.py  README.md
TEST/Example/TestQtUI/: README.md  advanced_dock_test.py  dock_test.py  main_pyside.py  main_window_pyside.py  run_tests.py  test_pyside.py  test_qt.py
TEST/Example/TestWindow/: README.md  detail_dock.py  dock_widget_base.py  event_dock.py  list_dock.py  main.py  main_window.py
TEST/ExampleModule/: setup.py
TEST/ExampleModule/QTWindowWindow/: __init__.py  client.py  main.py
TEST/project/: Base.py  coll.py
TEST/project/a/: Base.py
TEST/project/b/: Base.py
TEST/project/c/: Base.py
